# grpc-server-client

./: .gitignore  CMakeLists.txt  GrpcClient.hpp  GrpcClient.impl  GrpcClientCallData.hpp  GrpcClientCallData.impl  GrpcServer.cpp  GrpcServer.hpp  GrpcServer.impl  GrpcServerCallData.hpp  GrpcServerCallData.impl  README.md
.github/workflows/: Linux.yml  LinuxBuildAndTest.yml
examples/: CMakeLists.txt  SimpleClient.cpp  SimpleServer.cpp
tests/: CMakeLists.txt  Test.cpp
tests/proto/: SimpleService.proto  proto.cmake
